--- a/src/main/resources/com/example/insurance/EmployeeMainMenu.fxml
+++ b/src/main/resources/com/example/insurance/EmployeeMainMenu.fxml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.EmployeeMainMenuController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.EmployeeMainMenuController">
    <top>
       <Pane prefHeight="96.0" prefWidth="1280.0" visible="false" BorderPane.alignment="CENTER" />
    </top>
@@ -64,32 +76,22 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="537.0" prefWidth="1280.0">
                      <children>
-                        <TreeTableView layoutX="14.0" layoutY="45.0" prefHeight="480.0" prefWidth="752.0">
-                          <columns>
-                            <TreeTableColumn fx:id="id" prefWidth="116.0" text="ID заявки" />
-                              <TreeTableColumn fx:id="type" prefWidth="109.0" text="Вид" />
-                            <TreeTableColumn fx:id="client" minWidth="0.0" prefWidth="0.0" text="ID клиента" />
-                              <TreeTableColumn fx:id="start_date" prefWidth="126.0" text="Дата подачи" />
-                              <TreeTableColumn fx:id="validality" prefWidth="95.0" text="Срок" />
-                              <TreeTableColumn fx:id="cost" prefWidth="114.0" text="Цена" />
-                              <TreeTableColumn fx:id="payout" prefWidth="102.0" text="Выплаты">
-                                 <contextMenu>
-                                    <ContextMenu>
-                                      <items>
-                                        <MenuItem mnemonicParsing="false" text="огт" />
-                                      </items>
-                                    </ContextMenu>
-                                 </contextMenu>
-                              </TreeTableColumn>
-                              <TreeTableColumn fx:id="status" prefWidth="75.0" text="Статутс" />
-                          </columns>
-                           <columnResizePolicy>
-                              <TreeTableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                        </TreeTableView>
                         <Button layoutX="93.0" layoutY="14.0" mnemonicParsing="false" text="Button" />
                         <Button layoutX="158.0" layoutY="14.0" mnemonicParsing="false" text="Button" />
                         <Button layoutX="226.0" layoutY="14.0" mnemonicParsing="false" text="Button" />
+                        <TableView fx:id="contracts" layoutX="31.0" layoutY="121.0" prefHeight="200.0" prefWidth="729.0">
+                          <columns>
+                            <TableColumn fx:id="id" prefWidth="75.0" text="ID" />
+                            <TableColumn fx:id="client" prefWidth="75.0" text="ID клиента" />
+                              <TableColumn fx:id="type" prefWidth="130.0" text="Тип страхования" />
+                              <TableColumn fx:id="cost" minWidth="0.0" prefWidth="95.0" text="Стоимость" />
+                              <TableColumn minWidth="0.0" prefWidth="0.0" text="C1" />
+                              <TableColumn fx:id="payout" prefWidth="75.0" text="Выплаты" />
+                              <TableColumn fx:id="start_date" prefWidth="75.0" text="Дата начала" />
+                              <TableColumn fx:id="validality" prefWidth="75.0" text="Срок" />
+                              <TableColumn fx:id="status" prefWidth="75.0" text="Статус" />
+                          </columns>
+                        </TableView>
                      </children>
                   </AnchorPane>
                </content>
