--- a/src/main/resources/com/example/insurance/EmployeeMainMenu.fxml
+++ b/src/main/resources/com/example/insurance/EmployeeMainMenu.fxml
@@ -1,23 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.EmployeeMainMenuController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.EmployeeMainMenuController">
    <top>
       <Pane prefHeight="96.0" prefWidth="1280.0" visible="false" BorderPane.alignment="CENTER" />
    </top>
@@ -28,7 +17,7 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: white;">
                      <children>
-                        <LineChart layoutX="33.0" layoutY="14.0" prefHeight="380.0" prefWidth="470.0">
+                        <LineChart fx:id="lineChart" layoutX="33.0" layoutY="14.0" prefHeight="380.0" prefWidth="470.0">
                           <xAxis>
                             <CategoryAxis side="BOTTOM" />
                           </xAxis>
@@ -38,7 +27,7 @@
                         </LineChart>
                         <VBox layoutX="536.0" layoutY="48.0" prefHeight="322.0" prefWidth="703.0">
                            <children>
-                              <HBox prefHeight="100.0" prefWidth="200.0" spacing="150.0">
+                              <HBox prefHeight="100.0" prefWidth="200.0" spacing="195.0">
                                  <children>
                                     <Label text="Прибыль" />
                                     <Label text="Страховые выплаты" />
@@ -48,18 +37,18 @@
                                     <Insets />
                                  </opaqueInsets>
                               </HBox>
-                              <HBox prefHeight="100.0" prefWidth="200.0" spacing="100.0">
+                              <HBox prefHeight="100.0" prefWidth="200.0" spacing="200.0">
                                  <children>
-                                    <Label text="Кол-во клиентов" />
-                                    <Label text="Кол-во сотрудников" />
-                                    <Label text="Среднее кол-во договоров на клиента" />
+                                    <Label text="Клиенты" />
+                                    <Label text="Сотрудники" />
+                                    <Label text="Клиент/договор" />
                                  </children>
                               </HBox>
-                              <HBox prefHeight="100.0" prefWidth="200.0" spacing="100.0">
+                              <HBox prefHeight="100.0" prefWidth="200.0" spacing="135.0">
                                  <children>
-                                    <Label text="Кол-во активных договоров" />
-                                    <Label text="Кол-во завершенных" />
-                                    <Label text="Кол-во приостановленных" />
+                                    <Label text="Активные договоры" />
+                                    <Label text="Завершенные" />
+                                    <Label text="Приостановленные" />
                                  </children>
                               </HBox>
                            </children>
@@ -76,22 +65,30 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="537.0" prefWidth="1280.0">
                      <children>
-                        <Button layoutX="71.0" layoutY="14.0" mnemonicParsing="false" onAction="#upDateTable" text="Обновить" />
-                        <Button layoutX="158.0" layoutY="14.0" mnemonicParsing="false" text="Button" />
-                        <Button layoutX="226.0" layoutY="14.0" mnemonicParsing="false" text="Button" />
-                        <TableView fx:id="contracts" layoutX="31.0" layoutY="121.0" prefHeight="200.0" prefWidth="729.0">
+                        <Button layoutX="50.0" layoutY="454.0" mnemonicParsing="false" onAction="#upDateTable" text="Обновить" />
+                        <TableView fx:id="contracts" layoutX="25.0" layoutY="35.0" prefHeight="398.0" prefWidth="1227.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="35.0">
                           <columns>
                             <TableColumn fx:id="id" prefWidth="75.0" text="ID" />
                             <TableColumn fx:id="client" prefWidth="75.0" text="ID клиента" />
                               <TableColumn fx:id="type" prefWidth="130.0" text="Тип страхования" />
                               <TableColumn fx:id="cost" minWidth="0.0" prefWidth="95.0" text="Стоимость" />
-                              <TableColumn minWidth="0.0" prefWidth="0.0" text="C1" />
                               <TableColumn fx:id="payout" prefWidth="75.0" text="Выплаты" />
                               <TableColumn fx:id="start_date" prefWidth="75.0" text="Дата начала" />
                               <TableColumn fx:id="validality" prefWidth="75.0" text="Срок" />
                               <TableColumn fx:id="status" prefWidth="75.0" text="Статус" />
+                              <TableColumn fx:id="agreeButtonColumn" prefWidth="75.0" text="Одобрить" />
+                              <TableColumn fx:id="disagreeButtonColumn" prefWidth="75.0" text="Отклонить" />
                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </TableView>
+                        <Button layoutX="140.0" layoutY="454.0" mnemonicParsing="false" onAction="#getActiveContracts" text="Просмотр Активных договоров" />
+                        <Button layoutX="375.0" layoutY="454.0" mnemonicParsing="false" onAction="#getPassedContracts" text="Просмотр Завершенных договоров" />
+                        <Button layoutX="612.0" layoutY="454.0" mnemonicParsing="false" onAction="#getPausedContracts" text="Просмотр Приостановленных договоров" />
                      </children>
                   </AnchorPane>
                </content>
