--- a/src/main/resources/com/example/insurance/EmployeeMainMenu.fxml
+++ b/src/main/resources/com/example/insurance/EmployeeMainMenu.fxml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.EmployeeMainMenuController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.EmployeeMainMenuController">
    <top>
       <Pane prefHeight="96.0" prefWidth="1280.0" visible="false" BorderPane.alignment="CENTER" />
    </top>
@@ -17,7 +29,7 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: white;">
                      <children>
-                        <LineChart fx:id="lineChart" layoutX="33.0" layoutY="14.0" prefHeight="380.0" prefWidth="470.0">
+                        <LineChart fx:id="lineChart" layoutX="14.0" layoutY="28.0" prefHeight="380.0" prefWidth="496.0">
                           <xAxis>
                             <CategoryAxis side="BOTTOM" />
                           </xAxis>
@@ -25,38 +37,68 @@
                             <NumberAxis side="LEFT" />
                           </yAxis>
                         </LineChart>
-                        <VBox layoutX="536.0" layoutY="48.0" prefHeight="322.0" prefWidth="703.0">
+                        <DatePicker fx:id="startDate" editable="false" layoutX="69.0" layoutY="400.0" promptText="Начало" showWeekNumbers="true" />
+                        <DatePicker fx:id="endDate" editable="false" layoutX="69.0" layoutY="446.0" promptText="Конец" showWeekNumbers="true" />
+                        <Button layoutX="288.0" layoutY="425.0" mnemonicParsing="false" onAction="#getStatistic" text="Получить статистику" />
+                        <GridPane layoutX="516.0" layoutY="28.0" prefHeight="357.0" prefWidth="714.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
                            <children>
-                              <HBox prefHeight="100.0" prefWidth="200.0" spacing="195.0">
-                                 <children>
-                                    <Label text="Прибыль" />
+                              <Label fx:id="clearProfit" prefHeight="17.0" prefWidth="161.0">
+                                 <graphic>
+                                    <Label prefHeight="17.0" prefWidth="102.0" text="Чистая прибыль" />
+                                 </graphic>
+                              </Label>
+                              <Label fx:id="insuranceEventLose" prefHeight="17.0" prefWidth="263.0" GridPane.columnIndex="1">
+                                 <graphic>
                                     <Label text="Страховые выплаты" />
-                                    <Label text="Чистая прибыль" />
-                                 </children>
-                                 <opaqueInsets>
-                                    <Insets />
-                                 </opaqueInsets>
-                              </HBox>
-                              <HBox prefHeight="100.0" prefWidth="200.0" spacing="200.0">
-                                 <children>
-                                    <Label text="Клиенты" />
+                                 </graphic>
+                              </Label>
+                              <Label fx:id="profit" prefHeight="17.0" prefWidth="101.0" GridPane.columnIndex="2">
+                                 <graphic>
+                                    <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="54.0" text="Прибыль" />
+                                 </graphic>
+                              </Label>
+                              <Label fx:id="employee" prefHeight="17.0" prefWidth="161.0" GridPane.rowIndex="1">
+                                 <graphic>
                                     <Label text="Сотрудники" />
+                                 </graphic>
+                              </Label>
+                              <Label fx:id="clients" prefHeight="17.0" prefWidth="264.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <graphic>
+                                    <Label prefHeight="17.0" prefWidth="54.0" text="Клиенты" />
+                                 </graphic>
+                              </Label>
+                              <Label fx:id="clientsPerContract" prefHeight="17.0" prefWidth="173.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                                 <graphic>
                                     <Label text="Клиент/договор" />
-                                 </children>
-                              </HBox>
-                              <HBox prefHeight="100.0" prefWidth="200.0" spacing="135.0">
-                                 <children>
+                                 </graphic>
+                              </Label>
+                              <Label fx:id="ActiveContracts" prefHeight="17.0" prefWidth="149.0" GridPane.rowIndex="2">
+                                 <graphic>
                                     <Label text="Активные договоры" />
+                                 </graphic>
+                              </Label>
+                              <Label fx:id="PassedContracts" prefHeight="17.0" prefWidth="148.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                 <graphic>
                                     <Label text="Завершенные" />
+                                 </graphic>
+                              </Label>
+                              <Label fx:id="PausedContracts" prefHeight="17.0" prefWidth="202.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                                 <graphic>
                                     <Label text="Приостановленные" />
-                                 </children>
-                              </HBox>
+                                 </graphic>
+                              </Label>
                            </children>
-                        </VBox>
-                        <DatePicker layoutX="69.0" layoutY="400.0" />
-                        <DatePicker layoutX="261.0" layoutY="400.0" />
-                        <Button layoutX="130.0" layoutY="480.0" mnemonicParsing="false" text="Button" />
-                        <Button layoutX="322.0" layoutY="480.0" mnemonicParsing="false" text="Button" />
+                        </GridPane>
                      </children>
                   </AnchorPane>
                </content>
